--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,12 @@ button.secondary.active {
   color: yellow
 }
 
+div.popup {
+  position: absolute;
+  left: -1rem;
+  background-color: Canvas;
+  padding: 1rem;
+  border-radius: 4px;
+  border: 1px solid CanvasText;
+}
+    
