refactor: adjust button minimum width and implement delete confirmation dialog

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ table tbody tr td:last-child {
 } 
 button {
   cursor: pointer;
-  min-width: 50px;
+  min-width: 10ch;
   margin: 1ch 0;
   padding: 1ch;
   border: none;
