--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,15 @@ button {
   font-weight: 900;
 }
 
+
+input[type="date"],input[type="text"] {
+  min-width: 10ch;
+  padding : 0.85ch;
+  border: none;
+  border-radius: 5px;
+  font-weight: 900;
+}
+
 button.primary {
   background-color: #007bff;
 }
