--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,48 @@
+:root {
+  --dark-color-red: #7a1414;
+  --dark-color-yellow: #695710;
+  --dark-color-green: #106f10;
+  --dark-color-orange: #624314;
+  --dark-color-blue: #122869;
 
-table tbody tr td, 
+  --light-color-red: #eb6161;
+  --light-color-yellow: #e8c13f;
+  --light-color-green: #7ae47a;
+  --light-color-orange: #e38b4c;
+  --light-color-blue: #617fe3;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --color-bg-primary: var(--light-color-bg-primary);
+    --color-bg-secondary: var(--light-color-bg-secondary);
+    --color-red: var(--light-color-red);
+    --color-yellow: var(--light-color-yellow);
+    --color-green: var(--light-color-green);
+    --color-orange: var(--light-color-orange);
+    --color-blue: var(--light-color-blue);
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-bg-primary: var(--dark-color-bg-primary);
+    --color-bg-secondary: var(--dark-color-bg-secondary);
+    --color-red: var(--dark-color-red);
+    --color-yellow: var(--dark-color-yellow);
+    --color-green: var(--dark-color-green);
+    --color-orange: var(--dark-color-orange);
+    --color-blue: var(--dark-color-blue);
+  }
+}
+
+table tbody tr td,
 table thead tr th {
   text-align: left;
   padding: 2ch 1ch;
 
 }
+
 table thead tr th:first-child,
 table tbody tr td:first-child {
   padding-left: 0;
@@ -25,17 +63,17 @@ button {
   font-weight: 900;
 }
 
-
-input[type="date"],input[type="text"] {
+input[type="date"],
+input[type="text"] {
   min-width: 10ch;
-  padding : 0.85ch;
+  padding: 0.85ch;
   border: none;
   border-radius: 5px;
   font-weight: 900;
 }
 
 button.primary {
-  background-color: #007bff;
+  background-color: var(--color-green);
 }
 
 button:hover {
@@ -43,17 +81,13 @@ button:hover {
 }
 
 button.secondary {
-  background-color: #22425f;
-}
-button.secondary.inactive {
-  border: 2px solid transparent;
+  background-color: var(--color-blue);
 }
 
 button.secondary.active {
-  color: yellow;
-  border: 2px solid yellow;
+  background-color: var(--color-yellow);
+  color: CanvasText;
 }
-
 
 div.popup {
   position: absolute;
@@ -63,4 +97,3 @@ div.popup {
   border-radius: 4px;
   border: 1px solid CanvasText;
 }
-    
